force-app/main/default/objects/eContacts__Question__c/fields/eContacts__Forms__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Forms__c</fullName>
    <label>Forms</label>
    <referenceTo>eContacts__Forms__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>