force-app/main/default/objects/eContacts__Question__c/fields/eContacts__Options__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Options__c</fullName>
    <description>list multiple values on separate lines if &apos;Type&apos; is Picklist. 
leave &apos;Options&apos; blank if &apos;Type&apos; is Text.</description>
    <inlineHelpText>list multiple values on separate lines if &apos;Type&apos; is Picklist. 
leave &apos;Options&apos; blank if &apos;Type&apos; is Text.</inlineHelpText>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>