force-app/main/default/objects/eContacts__Question__c/fields/eContacts__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>