force-app/main/default/objects/eContacts__Question__c/fields/eContacts__Type__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>