force-app/main/default/objects/eContacts__Question__c/listViews/eContacts__All.listView-meta.xml
<ListView>
    <fullName>eContacts__All</fullName>
    <columns>NAME</columns>
    <columns>eContacts__Type__c</columns>
    <columns>eContacts__Forms__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>